--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
             <span id="greenl">l</span>
             <span id="rede">e</span>
         </h2>
+        <input type="" class="box1">
     </body>
 </html>
