--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
             <span id="rede">e</span>
         </h2>
         <input type="" class="box1">
+        <!-- Second navigation Bar -->
+        <nav>
+            <ul>
+                <li>Google Search</li>
+                <li>I'm Feeling Lucky</li>
+            </ul>
+        </nav>
     </body>
 </html>
