--- a/index.html
+++ b/index.html
@@ -1,47 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="media/googleLogo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Google</title>
-  </head>
-  <body>
-    <!-- This is the navigation Bar -->
-    <nav>
-      <ul>
-        <li>
-          <a href="https://mail.google.com/mail/&ogbl">Gmail</a>
-        </li>
-        <li>
-          <a href="https://www.google.com.ng/imghp?hl=en&ogbl">Images</a>
-        </li>
-        <li class="signin">
-          <a
-            href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ"
-            >Sign In</a
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="media/googleLogo.png" type="image/x-icon">
+        <link rel="stylesheet" href="style.css">
+        <title>Google</title>
+    </head>
+    <body>
+        <!-- This is the navigation Bar -->
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://mail.google.com/mail/&ogbl">Gmail</a>
+                </li>
+                <li>
+                    <a href="https://www.google.com.ng/imghp?hl=en&ogbl">Images</a>
+                </li>
+                <li class="signin">
+                    <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">
+                        Sign In
+                    </a
           >
-        </li>
-      </ul>
-    </nav>
-    <!-- The Google Headline -->
-    <h2 class="google">
-      <span id="blueg">G</span>
-      <span id="redo">o</span>
-      <span id="yellowo">o</span>
-      <span id="bluegg">g</span>
-      <span id="greenl">l</span>
-      <span id="rede">e</span>
-    </h2>
-    <input type="" class="box1" />
-    <!-- Second navigation Bar -->
-    <nav class="secondNav">
-      <ul>
-        <li>Google Search</li>
-        <li>I'm Feeling Lucky</li>
-      </ul>
-    </nav>
-  </body>
-</html>
+                </li>
+            </ul>
+        </nav>
+        <!-- The Google Headline -->
+        <h2 class="google">
+            <span id="blueg">G</span>
+            <span id="redo">o</span>
+            <span id="yellowo">o</span>
+            <span id="bluegg">g</span>
+            <span id="greenl">l</span>
+            <span id="rede">e</span>
+        </h2>
+        <input type="" class="box1">
+        <!-- Second navigation Bar -->
+        <nav class="secondNav">
+            <ul>
+                <li>Google Search</li>
+                <li>I'm Feeling Lucky</li>
+            </ul>
+            <br>
+        </nav>
+        <div class="box2">
+            Google offered in:
+            <a href="https://www.google.com/setprefs?sig=0_j4RgKEtCYgRdSd-KYjwQz7HRZt8%3D&hl=ha&source=homepage&sa=X&ved=0ahUKEwjxqqCR96v6AhXdVfEDHS8MAPgQ2ZgBCA4">Hausa</a>
+            <a href="https://www.google.com/setprefs?sig=0_j4RgKEtCYgRdSd-KYjwQz7HRZt8%3D&hl=ig&source=homepage&sa=X&ved=0ahUKEwjxqqCR96v6AhXdVfEDHS8MAPgQ2ZgBCA8">Igbo</a>
+            <a href="https://www.google.com/setprefs?sig=0_j4RgKEtCYgRdSd-KYjwQz7HRZt8%3D&hl=yo&source=homepage&sa=X&ved=0ahUKEwjxqqCR96v6AhXdVfEDHS8MAPgQ2ZgBCBA">Ede Yoruba</a>
+            <a href="https://www.google.com/setprefs?sig=0_j4RgKEtCYgRdSd-KYjwQz7HRZt8%3D&hl=pcm&source=homepage&sa=X&ved=0ahUKEwjxqqCR96v6AhXdVfEDHS8MAPgQ2ZgBCBE">Nigerian Pidgin</a>
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
+        <!-- last navigation bar -->
+        <nav class="nav3">
+            <ul>
+                <li>
+                    <a href="https://about.google/?utm_source=google-NG&utm_medium=referral&utm_campaign=hp-footer&fg=1"> About</a>
+                </li>
+                <li>
+                    <a href="https://www.google.com/intl/en_ng/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1">Advertising</a>
+                </li>
+                <li>
+                    <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1">Business</a>
+                </li>
+                <li>
+                    <a href="https://google.com/search/howsearchworks/?fg=1"> How Search Works</a>
+                </li>
+                <li class="carbon">
+                    <img src="media/leaf.png" alt="">
+                    <a href=" https://sustainability.google/carbon-free/?utm_source=googlehpfooter&utm_medium=housepromos&utm_campaign=bottom-footer&utm_content="> Carbon Neutral Since 2007</a>
+                </li>
+                <li>
+                    <a href="https://policies.google.com/privacy?hl=en-NG&fg=1"> Privacy</a>
+                </li>
+                <li>
+                    <a href="https://policies.google.com/terms?hl=en-NG&fg=1"> Terms</a>
+                </li>
+                <li>
+                    <a href="#"> Settings</a>
+                </li>
+            </ul>
+        </nav>
+    </body>
